[tool.poetry]
name = "iceberg-demo"
version = "0.1.0"
description = ""
authors = ["Varokas Panusuwan <varokas@panusuwan.com>"]
readme = "README.md"
packages = [{include = "iceberg_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pyiceberg = {extras = ["s3fs", "hive", "glue", "pyarrow"], version = "^0.6.1"}
pandas = "^1.5.3"
pyarrow = "^11.0.0"
jupyterlab = "^3.6.1"
pyspark = {extras = ["sql"], version = "^3.3.2"}
sparkmagic = "^0.20.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
